# WhiteDwarf

./: pyproject.toml
labs/: white.py  whiteDwarf.ipynb
