[tool.poetry]
name = "labs"
version = "0.1.0"
description = ""
authors = ["kiricord <rikudosennin410@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
scipy = "^1.9.3"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
